@@ -29,6 +29,7 @@ enum
 	COL_CHECK,
 	COL_DEVICE,
 	COL_MOUNT,
+	COL_TYPE,
 	TOT_COLUMNS
 };
 
