@@ -1,3 +1,11 @@
+2006-09-09  Fabio Marzocca  <thesaltydog@gmail.com>
+
+	* src/baobab-prefs.c: (create_props_model), (create_tree_props),
+	(fill_props_model):
+	* src/baobab-prefs.h:
+
+	Added filesystem type in preferences dialog
+
 2006-08-27  Dennis Cranston  <dennis_cranston@yahoo.com>
 
 	BUGZILLA: #349187, #350457, #351185, #351534, #351538, #351540, 
